# lrs-soc

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt
app/itm3903c/: CMakeLists.txt  itm3903cCommands.h  itm3903cConfig.h  itm3903cControlDisabled.c  itm3903cControlDisabled.h  itm3903cControlOL.c  itm3903cControlOL.h  itm3903cController.c  itm3903cController.h  itm3903cHw.c  itm3903cHw.h  itm3903cHwIf.c  itm3903cHwIf.h
common/: soc_defs.h
controller/: controller.c  controller.h  pidctl.c  pidctl.h  prpictl.c  prpictl.h
controlsys/: CMakeLists.txt  control.c  control.h  controlsys.c  controlsys.h
cpu0/: lscript.ld  main.c
cpu1/: lscript.ld  main.c
gencontroller/: buckHwIf.c  buckHwIf.h  buckHwIfPlecs.c  buckHwIfPlecs.h  control.c  control.h  controller.c  controller.h  controlsys.c  controlsys.h  controlsysCtlIf.c  controlsysCtlIf.h  controlsysHwIf.c  controlsysHwIf.h  controlsysInputIf.c  controlsysInputIf.h  pictl.c  pictl.h  pid.c  pid.h  pidctl.c  pidctl.h  rp.c  rp.h
hardware/: CMakeLists.txt
hardware/pico/: CMakeLists.txt  ipcClientPico.c  ipcClientPico.h  ipcServerPico.c  ipcServerPico.h  ocpPicoConfig.h  ocpPicoCpu0.c  ocpPicoCpu0.h  ocpPicoCpu1.c  ocpPicoCpu1.h  wz_pico_init.c  wz_pico_init.h  wz_tcp_server.c  wz_tcp_server.h
hardware/pico/pico_ocp_link/: memmap_default.ld
ipc/: CMakeLists.txt  ipcClient.c  ipcClient.h  ipcServer.c  ipcServer.h
labview/: CHANGELOG.md  Installation version.txt  README.md  Readme.md  Requirements_installation.txt  log_file.txt  test1.txt
ocp/: CMakeLists.txt  ocp.c  ocp.h  ocpCS.c  ocpCS.h  ocpCSMaster.c  (+16 more)
(+327 files in other folders)
